# mindthespread

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  quickstart.py  tt.py
docs/: conf.py  index.rst
docs/api/: feedstore.rst
mindthespread/: constants.py  ta.py  utils.py
mindthespread/agents/: __init__.py  base.py  crossover.py  rl.py
mindthespread/brokers/: __init__.py  alpaca.py  broker.py  ig.py  yahoo.py
mindthespread/cli/: app.py  data.py
mindthespread/entities/: agent.py  market.py
mindthespread/env/: __init__.py  trading_env.py
mindthespread/feedstore/: __init__.py
mindthespread/feedstore/engines/: base.py  firestore_engine.py  pandas.py  sqlalchemy.py
mindthespread/feedstore/feeds/: feed.py  ohlc_feed.py
mindthespread/loggers/: slack_handler.py
mindthespread/managers/: offline_manager.py
mindthespread/tracking/: base.py  mlflow.py
tests/: agent_tests.py  env_tests.py  feedstore_tests.py
